<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Routine Checker</string>
    <string name="title_activity_routine_list">RoutineListActivity</string>
    <string name="mock_routine_name">Fitness Run</string>
    <string name="mock_routine_desc">Running within the estate for fitness</string>
    <string name="mock_routine_time">3:30pm</string>
    <string name="mock_routine_freq">WEEKLY</string>
    <string name="menu_title_more">More</string>
    <string name="text_add_routine">Add Routine</string>
    <string name="text_next_up">Next Up</string>
    <string name="text_add_new_routine">Add New Routine</string>
    <string name="icon_title">icon_title</string>
    <string name="text_title">Title</string>
    <string name="text_add">Add</string>
    <string name="add_another">Add another</string>
    <string name="text_description">Description</string>
    <string name="text_start_time">Start time</string>
    <string name="mock_text_routine_freq_detail">Daily at 6:30AM</string>
    <string name="text_next_occurrence_elapse_time">Next in: <xliff:g example="59min, 59sec" id="next_occurrence_time">%s</xliff:g></string>
    <string name="text_empty_screen_detail_screen">There is no occurrence of this routine yet.</string>
    <string name="text_empty_screen_routine_list">You have no routine added yet.\nAdd one by clicking on the ADD BUTTON</string>
    <string name="text_progress_status_emoji">progress_status_emoji</string>
    <string name="text_done">DONE</string>
    <string name="text_missed">MISSED</string>
    <string name="mock_occurrence_date">Thurs, 24th May 2018</string>
    <string name="text_select_a_frequency">Select a frequency</string>
    <string name="text_edit_routine">Edit Routine</string>
    <string name="text_invalid_action_identifier">Invalid action identifier</string>
    <string name="prefix_text">custom://</string>
    <string name="text_next_up_in_x">Next up in <xliff:g example="12 hours" id="no_of_hrs">%s</xliff:g></string>
    <string name="text_delete_routine">Are you sure you want to delete this Routine?</string>
    <string name="alert_dialog_negative_button_label">NO</string>
    <string name="alert_dialog_positive_button_label">DELETE</string>
</resources>
