<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Filled State -->
    <android.support.design.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tool="http://schemas.android.com/tools"
        android:id="@+id/cl_filled_state"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorDirtyWhite">

        <!-- AppBarLayout -->
        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_appbar"
            app:elevation="@dimen/dimen_4dp">

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_300dp"
                android:padding="@dimen/dimen_16dp"
                app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                app:contentScrim="@drawable/bg_appbar"
                app:expandedTitleMarginStart="@dimen/toolbar_title_left_margin"
                app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="?actionBarSize"
                    android:gravity="center_horizontal|bottom"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_routine_title"
                        style="@style/BaseHeaderText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_8dp"
                        android:fontFamily="sans-serif-thin"
                        android:text="@string/mock_routine_name"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_24sp" />

                    <TextView
                        android:id="@+id/tv_routine_desc"
                        style="@style/BaseHeaderText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_8dp"
                        android:layout_marginTop="@dimen/dimen_16dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/mock_routine_desc"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_20sp" />

                    <TextView
                        android:id="@+id/tv_routine_freq_detail"
                        style="@style/SummaryText"
                        android:text="@string/mock_text_routine_freq_detail"
                        android:textSize="@dimen/text_20sp" />

                </LinearLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/Theme.AppCompat.DayNight.DarkActionBar"/>
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/ns_filled_state"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_collapseMode="parallax"
            app:layout_scrollFlags="scroll">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorDirtyWhite"
                android:orientation="vertical">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.eemf.sirgoingfar.core.custom.CircularProgressView
                        android:id="@+id/pb_routine_progress"
                        android:layout_width="@dimen/dimen_160dp"
                        android:layout_height="@dimen/dimen_160dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="@dimen/dimen_16dp"
                        android:layout_marginTop="@dimen/dimen_30dp"
                        android:layout_marginRight="@dimen/dimen_16dp"
                        android:layout_marginBottom="@dimen/dimen_30dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/iv_routine_progress_emoji"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/iv_routine_progress_emoji"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:percent="60"
                        app:percentTextSize="@dimen/text_36sp"
                        app:ringDiameter="@dimen/dimen_160dp"
                        app:subtext="occurrences achieved"
                        app:subtextColor="@color/colorBlack_opacity_75"
                        app:subtextMargin="2"
                        app:subtextSize="@dimen/dimen_14sp"
                        app:thickness="@dimen/dimen_16dp" />

                    <ImageView
                        android:id="@+id/iv_routine_progress_emoji"
                        android:layout_width="@dimen/dimen_70dp"
                        android:layout_height="@dimen/dimen_70dp"
                        android:layout_marginLeft="@dimen/dimen_16dp"
                        android:layout_marginRight="@dimen/dimen_16dp"
                        android:contentDescription="@string/text_progress_status_emoji"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/pb_routine_progress"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/pb_routine_progress"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_frown" />

                </android.support.constraint.ConstraintLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_routine_occurrences_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:background="@color/colorDirtyWhite"
                    android:clipToPadding="false"
                    android:focusable="false"
                    android:paddingBottom="@dimen/dimen_16dp"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    app:layout_collapseMode="parallax"
                    app:layout_scrollFlags="scroll"
                    tool:listitem="@layout/item_routine_occurrence" />
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

    <!-- Empty State -->
    <TextView
        android:id="@+id/tv_empty_state"
        style="@style/EmptyScreenText"
        android:layout_marginTop="@dimen/dimen_300dp"
        android:background="@color/colorDirtyWhite"
        android:gravity="center_horizontal"
        android:padding="@dimen/dimen_32dp"
        android:text="@string/text_empty_screen_detail_screen"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="@dimen/dimen_24dp"
        android:layout_height="@dimen/dimen_24dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_310dp"
        android:alpha="0.7"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorAccent"
        android:indeterminateTintMode="src_atop"
        tools:ignore="UnusedAttribute" />

</FrameLayout>