<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dimen_8dp"
    android:layout_marginLeft="@dimen/dimen_8dp"
    android:layout_marginTop="@dimen/dimen_16dp"
    android:layout_marginEnd="@dimen/dimen_8dp"
    android:layout_marginRight="@dimen/dimen_8dp"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="@dimen/dimen_5dp"
    app:cardElevation="@dimen/dimen_5dp">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_header_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_clickable_button"
            app:layout_constraintBottom_toTopOf="@id/btn_done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginBottom="@dimen/dimen_8dp">

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.7" />

            <TextView
                android:id="@+id/tv_occurrence_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/mock_occurrence_date"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintBottom_toTopOf="@+id/horizontal_rule"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_occurrence_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:layout_marginLeft="@dimen/dimen_8dp"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:layout_marginRight="@dimen/dimen_8dp"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:text="@string/text_done"
                android:textColor="@color/colorDone"
                android:textSize="@dimen/dimen_12sp"
                app:layout_constraintBottom_toTopOf="@+id/horizontal_rule"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/guideline"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/horizontal_rule"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_2dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:background="@color/colorGrey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_occurrence_date" />

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/btn_done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_done_button"
            android:fontFamily="sans-serif-regular"
            android:gravity="center"
            android:padding="@dimen/dimen_10dp"
            android:text="@string/text_done"
            android:textColor="@color/btn_category"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_missed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btn_missed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_header_container" />

        <TextView
            android:id="@+id/btn_missed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_missed_button"
            android:fontFamily="sans-serif-regular"
            android:gravity="center"
            android:padding="@dimen/dimen_10dp"
            android:text="@string/text_missed"
            android:textColor="@color/btn_category"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/btn_done"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_done"
            app:layout_constraintTop_toBottomOf="@+id/cl_header_container" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>